--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <p><i>aaa</i>aaa</p>
   <p>bbb</p>
   <img src="https://i.kym-cdn.com/entries/icons/original/000/033/302/cover1.jpg" width="500" height="500" />
+   <a href="doom.html">Voltar</a>
 </body>
 </html>
 
