--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>CACODEMON</title>
 </head>
-<body>
-  <h1 style="color:red;">DOOM</h1>
+<body> {background-color: red;}
+  <h1 DOOM</h1>
   <p><i>aaa</i>aaa</p>
   <p>bbb</p>
   <img src="https://i.kym-cdn.com/entries/icons/original/000/033/302/cover1.jpg" width="500" height="500" />
