--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <title>CACODEMON</title>
 </head>
-<body> {background-color: red;}
+<body> 
+  <style>
+    body {background-color: red;}
+    h1 {color: black;}
+</style>
+
   <h1 DOOM</h1>
   <p><i>aaa</i>aaa</p>
   <p>bbb</p>
