--- a/doom.html
+++ b/doom.html
@@ -4,6 +4,11 @@
   <title>CACODEMON</title>
 </head>
 <body>
+  <style>
+    body {background-color: red;}
+    h1 {color: black;}
+    p {color: black;}
+  </style>
   <p><i>aaa</i>aaa</p>
   <p>bbb</p>
   <img src="https://i.kym-cdn.com/entries/icons/original/000/033/302/cover1.jpg" width="500" height="500" />
@@ -20,9 +25,9 @@
     <td>MARS</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>INFERNO</td>
+    <td>INFERNO</td>
+    <td>INFERNO</td>
   </tr>
 </table>
 
