--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 </head>
 <body> 
   <style>
-    body {background-color: red;}
-    h1 {color: black;}
+    body {background-color: darkred;}
+    h1 {color: green;}
+    p {color: green;}
 </style>
 
-  <h1 DOOM</h1>
+  <h1>DOOM</h1>
   <p><i>aaa</i>aaa</p>
   <p>bbb</p>
   <img src="https://i.kym-cdn.com/entries/icons/original/000/033/302/cover1.jpg" width="500" height="500" />
