--- a/doom.html
+++ b/doom.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <style>
-    body {background-color: red;}
-    h1 {color: black;}
-    p {color: black;}
+    body {background-color: darkred;}
+    h1 {color: green;}
+    p {color: green;}
   </style>
   <p><i>aaa</i>aaa</p>
   <p>bbb</p>
