--- a/doom.html
+++ b/doom.html
@@ -8,6 +8,7 @@
     body {background-color: darkred;}
     h1 {color: green;}
     p {color: green;}
+     table {color: orange;}
   </style>
   <p><i>aaa</i>aaa</p>
   <p>bbb</p>
